app/assets/stylesheets/components/_navbar.scss
.sticky {
  position: -webkit-sticky;
	position: sticky;
	top: 0;
}
.navbar-horse {
  justify-content: space-between;
  background: white;
  h3 {
    font-family: 'Lobster', cursive;
    color: rgb(156, 48, 48);
  }
}

.navbar-horse .navbar-collapse {
  flex-grow: 0;
}

.navbar-brand {
  margin-right: 0;
}

.navbar-horse .navbar-brand img {
  width: 50px;
}
.container-logo {
  display: flex;
  h3{
    margin-top: 10px;
  }
}
.name-card {
  display: flex;
  justify-content: space-evenly;
  margin-top: 16px;
  p {
    margin-left: 10px;
  }
}

.btn-mare-bnb {
  border: rgb(156, 48, 48);
  padding: 8px;
  background-color: rgb(156, 48, 48);
  color: white;
  border-radius: 25px;
  margin-bottom: 15px;
  margin-left: 8px;
}

.request-button {
  margin-top: 32px;
}

